# agentic-trader

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: close-pull-requests.yml  main.yml
api/: main.py
api/routes/: agents.py  backtesting.py  execution.py  ml_pipeline.py  sentiment.py  strategies.py
api/schemas/: agents.py  backtesting.py  execution.py  ml_pipeline.py  sentiment.py  strategies.py
data/: README.md
docs/: architecture.md  roadmap.md  setup_guide.md
domains/agents/: README.md
domains/agents/base/: agent.py
domains/agents/experts/: forex_agent.py
domains/backtesting/: README.md
domains/backtesting/adapters/: csv_data_source.py  data_source.py
domains/backtesting/core/: engine.py
domains/backtesting/tests/: test_engine.py
domains/execution/: README.md
domains/execution/adapters/: binance_adapter.py  trading_platform.py
domains/execution/core/: order_manager.py
domains/execution/tests/: test_order_manager.py
domains/ml_pipeline/: README.md
domains/ml_pipeline/evaluation/: evaluator.py
domains/ml_pipeline/registry/: model_registry.py
domains/ml_pipeline/tests/: test_evaluator.py
domains/ml_pipeline/training/: trainer.py
domains/sentiment/: README.md
domains/sentiment/analysis/: analyzer.py
domains/sentiment/scraping/: news_scraper.py
domains/sentiment/tests/: test_analyzer.py
domains/strategies/: README.md  base_strategy.py
domains/strategies/base/: base_strategy.py
domains/strategies/ml_driven/: time_series_strategy.py
domains/strategies/rule_based/: moving_average.py
frontend-streamlit/: README.md  app.py
frontend-webapp/: README.md
infrastructure/docker/: api.Dockerfile  nginx.conf  streamlit.Dockerfile  webapp.Dockerfile
infrastructure/terraform/: main.tf  variables.tf
scripts/: ingest_market_data.py
tests/: README.md  conftest.py
tests/integration/: test_strategy_backtesting.py
