[tool.poetry]
name = "agentic-trader"
version = "0.1.0"
description = "A modular trading bot platform using domain-driven design"
authors = ["L-Gardiner <luke.gardiner.95+personalgithub@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.12.4"
pytest = "^8.4.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "W", "F", "I", "C", "B"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
